samples/_failures_safe/1761473494_e8b4de_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_872c71a9.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
